--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header style="justify-content: center">
   <nav>
     <ul>
-        <li class="nav-ul-li-1" style="flex-grow: 1; display: flex; align-items: center; justify-content: flex-start"><img src="images/icon.svg"><img src="images/Vector.svg"></li>
+        <li class="nav-ul-li-1" style="flex-grow: 1; display: flex; align-items: center; justify-content: flex-start"><img src="images/Icon.svg" alt=""><img src="images/Vector.svg" alt=""></li>
         <li>Home</li>
         <li>FAQ</li>
         <li>About Us</li>
