added a picture, i think it's final commit

--- a/website with all need requirements HW4/drake_biography.html
+++ b/website with all need requirements HW4/drake_biography.html
@@ -31,6 +31,7 @@
         <section id="biography">
            <h1>About Drake</h1>
            <p>Drake, born Aubrey Drake Graham, is a Canadian rapper, singer, songwriter, actor, and businessman...</p>
+            <img alt="" style=" max-width: 100%; height: auto; border-radius: 10px;" src="https://static01.nyt.com/images/2021/12/08/arts/06drake2/06drake2-mediumSquareAt3X.jpg">
         </section>
         <section id="discography">
             <h1>Discography</h1>
