added link to drake website in index.html

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <p>Home</p>
         <p>About</p>
         <p>Contact</p>
+        <p><a style="color: white" href="website%20with%20all%20need%20requirements%20HW4/drake_biography.html">Drake Website</a></p>
     </div>
     <div class="footer-column">
         <h1>Keep up to date</h1>
