added better media for drake website

--- a/website with all need requirements HW4/drake_biography.html
+++ b/website with all need requirements HW4/drake_biography.html
@@ -77,7 +77,28 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Drake Biography by Ivan Solomatin</p>
+        <div class="footer-column">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="#biography">About Drake</a></li>
+                <li><a href="#discography">Discography</a></li>
+                <li><a href="#awards">Awards</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>Contact</h3>
+            <p>Email: contact@drakebio.com</p>
+            <p>Phone: +1 (123) 456-7890</p>
+        </div>
+        <div class="footer-column">
+            <h3>Follow Us</h3>
+            <a href="#">F</a>
+            <a href="#">T</a>
+            <a href="#">I</a>
+        </div>
+        <div class="footer-column copyright">
+            <p>&copy; 2023 Drake Biography by Ivan Solomatin</p>
+        </div>
     </footer>
 </body>
 </html>
